--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money-claim-solutions",
+  "name": "florida-claim-solutions",
   "version": "0.1.0",
   "private": true,
   "scripts": {
